--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ pipeline:
     environment:
       - DOCKER_HOST=tcp://172.17.0.1:2375
     commands:
-      - docker login -u="${DOCKER_USERNAME}" -p="${DOCKER_QUAY_PASSWORD}" "${DOCKER_REPO}"
+      - docker login -u="digperms" -p="${ARTIFACTORY_TOKEN}" quay.io
       - docker tag openjdk10:$${DRONE_COMMIT_SHA} quay.io/ukhomeofficedigital/openjdk10:$${DRONE_COMMIT_SHA}
       - docker tag openjdk10:$${DRONE_COMMIT_SHA} quay.io/ukhomeofficedigital/openjdk10:latest
       - docker push quay.io/ukhomeofficedigital/openjdk10:$${DRONE_COMMIT_SHA}
@@ -30,7 +30,7 @@ pipeline:
     environment:
       - DOCKER_HOST=tcp://172.17.0.1:2375
     commands:
-      - docker login -u="${DOCKER_USERNAME}" -p="${DOCKER_QUAY_PASSWORD}" "${DOCKER_REPO}"
+      - docker login -u="digperms" -p="${ARTIFACTORY_TOKEN}" quay.io
       - docker tag openjdk10:$${DRONE_COMMIT_SHA} quay.io/ukhomeofficedigital/openjdk10:$${DRONE_TAG}
       - docker push quay.io/ukhomeofficedigital/openjdk10:$${DRONE_TAG}
     when:
