--- a/.drone.yml
+++ b/.drone.yml
@@ -15,11 +15,11 @@ pipeline:
     environment:
       - DOCKER_HOST=tcp://172.17.0.1:2375
     commands:
-      - docker login -u="digperms" -p=$${ARTIFACTORY_TOKEN} quay.io
-      - docker tag openjdk10:$${DRONE_COMMIT_SHA} quay.io/ukhomeofficedigital/openjdk10:$${DRONE_COMMIT_SHA}
-      - docker tag openjdk10:$${DRONE_COMMIT_SHA} quay.io/ukhomeofficedigital/openjdk10:latest
-      - docker push quay.io/ukhomeofficedigital/openjdk10:$${DRONE_COMMIT_SHA}
-      - docker push quay.io/ukhomeofficedigital/openjdk10:latest
+      - docker login -u="digperms" -p=$${ARTIFACTORY_TOKEN} docker.digital.homeoffice.gov.uk
+      - docker tag openjdk10:$${DRONE_COMMIT_SHA} docker.digital.homeoffice.gov.uk/openjdk10:$${DRONE_COMMIT_SHA}
+      - docker tag openjdk10:$${DRONE_COMMIT_SHA} docker.digital.homeoffice.gov.uk/openjdk10:latest
+      - docker push docker.digital.homeoffice.gov.uk:$${DRONE_COMMIT_SHA}
+      - docker push docker.digital.homeoffice.gov.uk/openjdk10:latest
     when:
       event: push
       branch: master
@@ -31,7 +31,7 @@ pipeline:
       - DOCKER_HOST=tcp://172.17.0.1:2375
     commands:
       - docker login -u="digperms" -p=$${ARTIFACTORY_TOKEN} quay.io
-      - docker tag openjdk10:$${DRONE_COMMIT_SHA} quay.io/ukhomeofficedigital/openjdk10:$${DRONE_TAG}
-      - docker push quay.io/ukhomeofficedigital/openjdk10:$${DRONE_TAG}
+      - docker tag openjdk10:$${DRONE_COMMIT_SHA} docker.digital.homeoffice.gov.uk/openjdk10:$${DRONE_TAG}
+      - docker push docker.digital.homeoffice.gov.uk/openjdk10:$${DRONE_TAG}
     when:
       event: tag
