--- a/.drone.yml
+++ b/.drone.yml
@@ -8,14 +8,14 @@ pipeline:
     when:
       event: [push, pull_request]
 
-  image_to_quay:
+  image_to_artifactory:
     image: docker:17.09.1
     secrets:
-      - docker_password
+      - artifactory_token
     environment:
       - DOCKER_HOST=tcp://172.17.0.1:2375
     commands:
-      - docker login -u="digperms" -p="${ARTIFACTORY_TOKEN}" docker.digital.homeoffice.gov.uk
+      - docker login -u="digperms" -p=$${ARTIFACTORY_TOKEN} docker.digital.homeoffice.gov.uk
       - docker tag openjdk10:$${DRONE_COMMIT_SHA} docker.digital.homeoffice.gov.uk/openjdk10:$${DRONE_COMMIT_SHA}
       - docker tag openjdk10:$${DRONE_COMMIT_SHA} docker.digital.homeoffice.gov.uk/openjdk10:latest
       - docker push docker.digital.homeoffice.gov.uk:$${DRONE_COMMIT_SHA}
@@ -23,15 +23,3 @@ pipeline:
     when:
       event: push
       branch: master
-
-  tagged_image_to_quay:
-    image: docker:17.09.1
-    secrets: [ docker_password ]
-    environment:
-      - DOCKER_HOST=tcp://172.17.0.1:2375
-    commands:
-      - docker login -u="digperms" -p="${ARTIFACTORY_TOKEN}" docker.digital.homeoffice.gov.uk
-      - docker tag openjdk10:$${DRONE_COMMIT_SHA} docker.digital.homeoffice.gov.uk/openjdk10:$${DRONE_TAG}
-      - docker push docker.digital.homeoffice.gov.uk/openjdk10:$${DRONE_TAG}
-    when:
-      event: tag
