Add artifactory token

--- a/.drone.yml
+++ b/.drone.yml
@@ -8,18 +8,18 @@ pipeline:
     when:
       event: [push, pull_request]
 
-  image_to_artifactory:
+  image_to_quay:
     image: docker:17.09.1
     secrets:
       - artifactory_token
     environment:
       - DOCKER_HOST=tcp://172.17.0.1:2375
     commands:
-      - docker login -u="digperms" -p=$${ARTIFACTORY_TOKEN} docker.digital.homeoffice.gov.uk
-      - docker tag openjdk10:$${DRONE_COMMIT_SHA} docker.digital.homeoffice.gov.uk/openjdk10:$${DRONE_COMMIT_SHA}
-      - docker tag openjdk10:$${DRONE_COMMIT_SHA} docker.digital.homeoffice.gov.uk/openjdk10:latest
-      - docker push docker.digital.homeoffice.gov.uk/openjdk10:$${DRONE_COMMIT_SHA}
-      - docker push docker.digital.homeoffice.gov.uk/openjdk10:latest
+      - docker login -u="digperms" -p=$${ARTIFACTORY_TOKEN} quay.io
+      - docker tag openjdk10:$${DRONE_COMMIT_SHA} quay.io/ukhomeofficedigital/openjdk10:$${DRONE_COMMIT_SHA}
+      - docker tag openjdk10:$${DRONE_COMMIT_SHA} quay.io/ukhomeofficedigital/openjdk10:latest
+      - docker push quay.io/ukhomeofficedigital/openjdk10:$${DRONE_COMMIT_SHA}
+      - docker push quay.io/ukhomeofficedigital/openjdk10:latest
     when:
       event: push
       branch: master
